--- a/jestconfig.json
+++ b/jestconfig.json
@@ -4,5 +4,8 @@
     },
     "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "moduleNameMapper": {
+        "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+      },
     "testEnvironment": "jsdom"
   }
