--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uilibrary",
-  "version": "1.0.0",
+  "name": "@athakur0211/uilibrary",
+  "version": "1.0.4",
   "description": "",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -10,17 +10,18 @@
     "url": "git+https://github.com/Athakurmsys/UILibrary.git"
   },
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
+    "build": "npm run build:esm && npm run build:cjs && npm run rollup",
+    "rollup": "rollup -c",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src}/**/*.{js,ts,jsx,tsx}\"",
+    "prettier": "prettier --write \"{src,tests}/**/*.{js,ts,jsx,tsx,css}\"",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run prettier && npm run lint"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=17.0.0"
   },
   "files": [
     "dist",
@@ -35,6 +36,9 @@
   "author": "Aman Thakur (Athakurmsys)",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.7",
     "@types/react": "^18.0.17",
@@ -45,13 +49,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^28.1.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^2.78.1",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-postcss": "^4.0.2",
     "ts-jest": "^28.0.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
