--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
     "include": ["src"],
     "exclude": [
       "dist",
-      "node_modules"
     ],
     "compilerOptions": {
       "module": "esnext",
@@ -22,5 +21,6 @@
       "esModuleInterop": true,
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
+      "plugins": [{ "name": "typescript-plugin-css-modules" }]
     }
   }
